# golem-llm

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yaml
exec/: Makefile.toml
exec/exec/: Cargo.toml
exec/exec/bindings/: exec_library.rs
exec/exec/src/: lib.rs
exec/exec/wit/: exec.wit
exec/javascript/: Cargo.toml
exec/javascript/src/: bindings.rs
exec/javascript/wit/: javascript.wit
llm/: Makefile.toml
llm/anthropic/: Cargo.toml
llm/anthropic/src/: bindings.rs
llm/bedrock/: Cargo.toml
llm/bedrock/src/: async_utils.rs  bindings.rs  client.rs  conversions.rs  lib.rs  stream.rs  wasi_client.rs
llm/grok/: Cargo.toml
llm/grok/src/: bindings.rs
llm/llm/: Cargo.toml
llm/llm/src/: config.rs  durability.rs
llm/ollama/: Cargo.toml
llm/ollama/src/: bindings.rs
llm/openai/: Cargo.toml
llm/openai/src/: bindings.rs  client.rs  conversions.rs
llm/openrouter/: Cargo.toml
llm/openrouter/src/: bindings.rs
llm/wit/: deps.toml
search/: Makefile.toml
search/algolia/: Cargo.toml
search/algolia/src/: bindings.rs  client.rs  client_test.rs  conversions.rs  lib.rs
search/algolia/wit/: algolia.wit
search/elasticsearch/: Cargo.toml
search/elasticsearch/src/: bindings.rs  client.rs  conversions.rs  lib.rs
search/elasticsearch/wit/: elasticsearch.wit
search/meilisearch/: Cargo.toml
search/meilisearch/src/: bindings.rs  client.rs  client_old.rs  client_test.rs  conversions.rs  lib.rs
search/meilisearch/wit/: meilisearch.wit
search/opensearch/: Cargo.toml
search/opensearch/src/: bindings.rs  client.rs  client_test.rs  conversions.rs  lib.rs
search/opensearch/wit/: opensearch.wit
search/search/: Cargo.toml
search/search/src/: config.rs  durability.rs  error.rs  lib.rs
search/search/wit/: search.wit
search/typesense/: Cargo.toml
search/typesense/src/: bindings.rs  client.rs  conversions.rs  lib.rs
search/typesense/wit/: typesense.wit
test-search/components-rust/test-search/: Cargo.toml  golem.yaml
test-search/components-rust/test-search/src/: algo.rs  lib.rs
test-search/components-rust/test-search/wit/: test-search.wit
test/components-rust/test-llm/: Cargo.toml  golem.yaml
test/components-rust/test-llm/src/: lib.rs  utils.rs
tts/: Cargo.toml
tts-elevenlabs/: Cargo.toml
tts-elevenlabs/src/: bindings.rs  client.rs  lib.working  synthesis.rs  voices.rs
tts-elevenlabs/wit/: elevenlabs.wit
tts/src/: lib.rs
tts/wit/: tts.wit
wit/golem-tts/: golem-tts.wit
