[package]
name = "golem-tts-elevenlabs"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://golem.cloud"
repository = "https://github.com/golemcloud/golem-llm"
description = "WebAssembly component for working with ElevenLabs APIs, with special support for Golem Cloud"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["durability"]
durability = ["golem-rust/durability"]

[dependencies]
golem-tts = { path = "../tts", version = "0.0.1" , default-features=false}

golem-rust = { workspace = true }
log = { workspace = true }
reqwest =  { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }

[package.metadata.component]
package = "golem:tts-elevenlabs"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:tts" = { path = "wit/deps/golem-tts" }


[package.metadata.component.bindings]
generate_unused_types = true

