[package]
name = "golem-exec-javascript"
version = "0.0.0"
edition = "2021"

[dependencies]
golem-exec = { path = "../exec" }
golem-rust = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }



[package.metadata.component]
package = "golem:exec-javascript"

# [package.metadata.component.bindings.with]
# "golem:exec/types@1.0.0" = "golem_exec::golem::exec::types"
# "golem:exec/executor@1.0.0" = "golem_exec::golem::exec::executor"
# "golem:exec/session@1.0.0" = "golem_exec::golem::exec::session"





[package.metadata.component.bindings]
generate_unused_types = true

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"golem:exec" = { path = "wit/deps/golem-exec" }
"wasi:io" = { path = "wit/deps/wasi:io"}
